<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sakura Player</string>
    <string name="title_activity_tracklist">TracklistActivity</string>

    <string name="page_indicator_artists">Исполнители</string>
    <string name="page_indicator_albums">Альбомы</string>
    <string name="page_indicator_tracks">Треки</string>
    <string name="page_indicator_playlists">Плейлисты</string>
    <string name="enter_to_lastfm">Войти в LastFM</string>
    <string name="no_thank_you">Нет, спасибо</string>
    <string name="login_to_lastfm">Вход в LastFm</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="cancel">Отмена</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="network_error">Сетевая ошибка</string>
    <string name="error">Ошибка</string>
    <string name="ok">OK</string>
    <string name="invalid_password_or_login">Не верный пароль либо логин</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="home">Главная</string>
    <string name="tracks">Треки</string>
    <string name="artists">Исполнители</string>
    <string name="albums">Альбомы</string>
    <string name="playlists">Плейлисты</string>
    <string name="recommendations">Рекомендации</string>
    <string name="similiar_artists">Похожие исполнители:</string>
    <string name="new_releases">Новые релизы</string>
    <string name="album">Альбом</string>
    <string name="artist">Исполнитель</string>
    <string name="error_check_your_net_and_retry">Проверьте свое интернет соеденение и попробуйте снова</string>
    <string name="network_timeout">Таймаут соеденения</string>
    <string name="server_error">Ошибка сервера</string>
</resources>
