<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/navigation_menu_recommends"
            android:title="@string/recommendations" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_playlist_all"
            android:icon="@drawable/ic_audiotrack_selector"
            android:title="@string/tracks" />
        <item
            android:id="@+id/navigation_menu_playlist_artist"
            android:icon="@drawable/ic_piano_selector"
            android:title="@string/artists" />
        <item
            android:id="@+id/navigation_menu_playlist_albums"
            android:icon="@drawable/ic_album_selector"
            android:title="@string/albums" />
        <item
            android:id="@+id/navigation_menu_playlist_playlists"
            android:icon="@drawable/ic_playlists_selector"
            android:title="@string/playlists" />
    </group>

</menu>